--- a/q/275821.html
+++ b/q/275821.html
@@ -26,19 +26,26 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>045</td><td>Arturo</td><td>240927T234406Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275837#275837">chunes</a></td></tr>
-<tr d-ix="1"><td>027</td><td>J</td><td>240927T233938Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275836#275836">south</a></td></tr>
-<tr d-ix="2"><td>032</td><td>Google Sheets</td><td>240927T153907Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275829#275829">doubleun</a></td></tr>
-<tr d-ix="3"><td>043</td><td>><> Fish</td><td>240927T163730Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275831#275831">value1</a></td></tr>
-<tr d-ix="4"><td>8125</td><td>Vyxal j</td><td>240927T143405Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275824#275824">lyxal</a></td></tr>
-<tr d-ix="5"><td>044</td><td>Bash</td><td>240927T142931Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275822#275822">Themooni</a></td></tr>
+<tr d-ix="0"><td>024</td><td>Bash + common utilities</td><td>240927T235348Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275838#275838">Digital </a></td></tr>
+<tr d-ix="1"><td>045</td><td>Arturo</td><td>240927T234406Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275837#275837">chunes</a></td></tr>
+<tr d-ix="2"><td>027</td><td>J</td><td>240927T233938Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275836#275836">south</a></td></tr>
+<tr d-ix="3"><td>032</td><td>Google Sheets</td><td>240927T153907Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275829#275829">doubleun</a></td></tr>
+<tr d-ix="4"><td>043</td><td>><> Fish</td><td>240927T163730Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275831#275831">value1</a></td></tr>
+<tr d-ix="5"><td>8125</td><td>Vyxal j</td><td>240927T143405Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275824#275824">lyxal</a></td></tr>
+<tr d-ix="6"><td>044</td><td>Bash</td><td>240927T142931Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275822#275822">Themooni</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 45 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a> + common utilities, 24</h1>
+
+<pre class="lang-bash prettyprint-override"><code>seq 140|paste -d, - -|nl
+</code></pre>
+<p><a href="https://tio.run/##S0oszvj/vzi1UMHQxKCmILG4JFVBN0VHQVdBtyYv5/9/AA" rel="nofollow noreferrer" title="Bash – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 45 bytes</h1>
 <pre class="lang-arturo prettyprint-override"><code>loop 70'n-&gt;print[pad~&quot;|n|&quot;2~&quot;|dec*2n|,|n*2|&quot;]
 </code></pre>
 <p><a href="http://arturo-lang.io/playground?FM5Bn4" rel="nofollow noreferrer">Try it!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, 27 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, 27 bytes</h1>
 <pre><code>1(&quot;:,TAB,&lt;:@+:&quot;:@,+:)@+i.70
 </code></pre>
 <p>Formats n with <code>2*n-1</code> and <code>2*n</code> using left justify for the round numbers and tab and space for the delimiters.</p>
@@ -55,7 +62,7 @@
     ,                         NB. concat
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1>Google Sheets, 32 bytes</h1>
+<div id="pu3" class="pu"><h1>Google Sheets, 32 bytes</h1>
 <pre><code>=sort(row(1:70)*{1,2,2}-{0,1,0})
 </code></pre>
 <p><img src="https://i.sstatic.net/jtMbpfRF.png" alt="enter image description here" /></p>
@@ -64,14 +71,14 @@
 </code></pre>
 <p><img src="https://i.sstatic.net/Da882ED4.png" alt="enter image description here" /></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://esolangs.org/wiki/Fish" rel="nofollow noreferrer">&gt;&lt;&gt; (Fish)</a>, 43 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://esolangs.org/wiki/Fish" rel="nofollow noreferrer">&gt;&lt;&gt; (Fish)</a>, 43 bytes</h1>
 <pre><code>1:::::&quot;G&quot;=?;n&quot; &quot;{a(?:{a(?oo2*:1-n&quot;,&quot;onao1+!
 </code></pre>
 <p>Might be able to be improved, but I couldn't find anything right now.</p>
 <p>Starts with the counter as 1 and loops until exiting on <code>71</code>. Adds a space if the counter is less than <code>10</code>, then makes two copies of the counter times two, then prints that minus one, a comma, the remaining copy, then a newline.</p>
 <p><a href="https://mousetail.github.io/Fish/#eyJ0ZXh0IjoiMTo6Ojo6XCJHXCI9PztuXCIgXCJ7YSg/OnthKD9vbzIqOjEtblwiLFwib25hbzErISIsImlucHV0IjoiIiwic3RhY2siOiIiLCJzdGFja19mb3JtYXQiOiJjaGFycyIsImlucHV0X2Zvcm1hdCI6ImNoYXJzIn0=" rel="nofollow noreferrer">Try it</a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a> <code>j</code>, 65 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 8.125 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a> <code>j</code>, 65 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 8.125 bytes</h1>
 <pre><code>70ƛd₍‹:&quot;Ṅ
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJqPSIsIiIsIjcwxptk4oKN4oC5Olwi4bmEIiwiIiwiIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -91,7 +98,7 @@
 </code></pre>
 <p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 44 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 44 bytes</h1>
 <pre class="lang-bash prettyprint-override"><code>for i in {1..70};{
 echo $i $[i*2-1],$[i*2]
 }
