--- a/q/275790.html
+++ b/q/275790.html
@@ -26,16 +26,104 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>086</td><td>JavaScript ES6</td><td>240926T204618Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275800#275800">Arnauld</a></td></tr>
-<tr d-ix="1"><td>090</td><td>Haskell</td><td>240927T012833Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275807#275807">Antonio </a></td></tr>
-<tr d-ix="2"><td>133</td><td>Bash + brotli</td><td>240927T112026Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275814#275814">Kjetil S</a></td></tr>
-<tr d-ix="3"><td>043</td><td>05AB1E</td><td>240927T075515Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275811#275811">Kevin Cr</a></td></tr>
-<tr d-ix="4"><td>039</td><td>Jelly</td><td>240926T203448Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275799#275799">Jonathan</a></td></tr>
-<tr d-ix="5"><td>030</td><td>Charcoal</td><td>240926T212522Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275802#275802">Neil</a></td></tr>
-<tr d-ix="6"><td>051</td><td>Vyxal 3 Mj</td><td>240926T164718Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275796#275796">pacman25</a></td></tr>
-<tr d-ix="7"><td>129</td><td>Bubblegum</td><td>240926T150257Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275795#275795">Themooni</a></td></tr>
+<tr d-ix="0"><td>108</td><td>Neovim Macro</td><td>240928T010938Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275840#275840">typecast</a></td></tr>
+<tr d-ix="1"><td>086</td><td>JavaScript ES6</td><td>240926T204618Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275800#275800">Arnauld</a></td></tr>
+<tr d-ix="2"><td>090</td><td>Haskell</td><td>240927T012833Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275807#275807">Antonio </a></td></tr>
+<tr d-ix="3"><td>133</td><td>Bash + brotli</td><td>240927T112026Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275814#275814">Kjetil S</a></td></tr>
+<tr d-ix="4"><td>043</td><td>05AB1E</td><td>240927T075515Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275811#275811">Kevin Cr</a></td></tr>
+<tr d-ix="5"><td>039</td><td>Jelly</td><td>240926T203448Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275799#275799">Jonathan</a></td></tr>
+<tr d-ix="6"><td>030</td><td>Charcoal</td><td>240926T212522Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275802#275802">Neil</a></td></tr>
+<tr d-ix="7"><td>051</td><td>Vyxal 3 Mj</td><td>240926T164718Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275796#275796">pacman25</a></td></tr>
+<tr d-ix="8"><td>129</td><td>Bubblegum</td><td>240926T150257Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275795#275795">Themooni</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 86 bytes</h1>
+<div id="pu0" class="pu"><h1>Neovim Macro, 108 bytes</h1>
+<p><code>28o<kbd>Esc</kbd>5G<kbd>C-v</kbd>23jI3/<kbd>Esc</kbd>23jVkg<kbd>C-x</kbd>G0<kbd>C-v</kbd>24kI7°<kbd>Esc</kbd>gvg<kbd>C-a</kbd>Gk0<kbd>C-v</kbd>ggI1/<kbd>Esc</kbd><kbd>C-v</kbd>3j6<kbd>C-a</kbd>gvg<kbd>C-a</kbd><kbd>C-v</kbd>26jI28 <kbd>Esc</kbd>gvlg<kbd>C-x</kbd>$r_:%s/\v(\d+)(.)/\1A\2<kbd>C-v</kbd><kbd>Esc</kbd>/g<kbd>Enter</kbd>qq^D@&quot;kq28@q</code></p>
+<p>Unprintable characters have been replaced with the keypresses they represent. Below is the raw hexdump:</p>
+<pre><code>00000000  32 38 6f 1b 35 47 16 32  33 6a 49 33 2f 1b 32 33  |28o.5G.23jI3/.23|
+00000010  6a 56 6b 67 18 47 30 16  32 34 6b 49 37 c2 b0 1b  |jVkg.G0.24kI7...|
+00000020  67 76 67 01 47 6b 30 16  67 67 49 31 2f 1b 16 33  |gvg.Gk0.ggI1/..3|
+00000030  6a 36 01 67 76 67 01 16  32 36 6a 49 32 38 20 1b  |j6.gvg..26jI28 .|
+00000040  67 76 6c 67 18 24 72 5f  3a 25 73 2f 5c 76 28 5c  |gvlg.$r_:%s/\v(\|
+00000050  64 2b 29 28 2e 29 2f 5c  31 41 5c 32 16 1b 2f 67  |d+)(.)/\1A\2../g|
+00000060  0d 71 71 5e 44 40 22 6b  71 32 38 40 71 0a        |.qq^D@&quot;kq28@q.|
+</code></pre>
+<p>Here's a command you can use to test it, run this and then press <kbd>F5</kbd> in an empty buffer:</p>
+<p><code>:map &lt;F5&gt; 28o&lt;Esc&gt;5G&lt;C-V&gt;23jI3/&lt;Esc&gt;23jVkg&lt;C-X&gt;G0&lt;C-V&gt;24kI7°&lt;Esc&gt;gvg&lt;C-A&gt;Gk0&lt;C-V&gt;ggI1/&lt;Esc&gt;&lt;C-V&gt;3j6&lt;C-A&gt;gvg&lt;C-A&gt;&lt;C-V&gt;26jI28&lt;Space&gt;&lt;Esc&gt;gvlg&lt;C-X&gt;$r_:%s/\v(\d+)(.)/\1A\2&lt;C-V&gt;&lt;Esc&gt;/g&lt;CR&gt;qq^D@&quot;kq28@q</code></p>
+<h2>Explanation</h2>
+<h3>Stage 1: RLE decoding</h3>
+<p><code>28o<kbd>Esc</kbd>5G<kbd>C-v</kbd>23jI3/<kbd>Esc</kbd>23jVkg<kbd>C-x</kbd>G0<kbd>C-v</kbd>24kI7°<kbd>Esc</kbd>gvg<kbd>C-a</kbd>Gk0<kbd>C-v</kbd>ggI1/<kbd>Esc</kbd><kbd>C-v</kbd>3j6<kbd>C-a</kbd>gvg<kbd>C-a</kbd><kbd>C-v</kbd>26jI28 <kbd>Esc</kbd>gvlg<kbd>C-x</kbd>$r_</code></p>
+<p>The first part of the program is simply my best attempt to encode the RLE version of the final string:</p>
+<pre><code>27 8_
+26 9/
+25 10/
+24 11/
+23 1/8°3/
+22 1/9°3/
+21 1/10°3/
+20 1/11°3/
+19 1/12°3/
+18 1/13°3/
+17 1/14°3/
+16 1/15°3/
+15 1/16°3/
+14 1/17°3/
+13 1/18°3/
+12 1/19°3/
+11 1/20°3/
+10 1/21°3/
+9 1/22°3/
+8 1/23°3/
+7 1/24°3/
+6 1/25°3/
+5 1/26°3/
+4 1/27°3/
+3 1/28°3/
+2 1/29°3/
+1 1/30°2/
+1/31°1/
+32°
+</code></pre>
+<p>For example, the first line is 27 spaces followed by 8 underscores.</p>
+<p>This was done by hand, there's not really any special tricks here. The best way to see what's going on here is to just execute the code by hand and watch it construct the string, it's mostly just going back to front (for alignment reasons) and using <code>g<kbd>C-A</kbd></code> and <code>g<kbd>C-X</kbd></code> along with block selections.</p>
+<h3>Stage 2: Macro conversion</h3>
+<p><code>:%s/\v(\d+)(.)/\1A\2<kbd>C-v</kbd><kbd>Esc</kbd>/g<kbd>Enter</kbd></code></p>
+<p>This executes a pattern that matches an RLE &quot;packet&quot; and transforms it into a macro that inserts that packet. The buffer now looks like this:</p>
+<pre>
+27A <kbd>^[</kbd>8A_<kbd>^[</kbd>
+26A <kbd>^[</kbd>9A/<kbd>^[</kbd>
+25A <kbd>^[</kbd>10A/<kbd>^[</kbd>
+24A <kbd>^[</kbd>11A/<kbd>^[</kbd>
+23A <kbd>^[</kbd>1A/<kbd>^[</kbd>8A°<kbd>^[</kbd>3A/<kbd>^[</kbd>
+22A <kbd>^[</kbd>1A/<kbd>^[</kbd>9A°<kbd>^[</kbd>3A/<kbd>^[</kbd>
+21A <kbd>^[</kbd>1A/<kbd>^[</kbd>10A°<kbd>^[</kbd>3A/<kbd>^[</kbd>
+20A <kbd>^[</kbd>1A/<kbd>^[</kbd>11A°<kbd>^[</kbd>3A/<kbd>^[</kbd>
+19A <kbd>^[</kbd>1A/<kbd>^[</kbd>12A°<kbd>^[</kbd>3A/<kbd>^[</kbd>
+18A <kbd>^[</kbd>1A/<kbd>^[</kbd>13A°<kbd>^[</kbd>3A/<kbd>^[</kbd>
+17A <kbd>^[</kbd>1A/<kbd>^[</kbd>14A°<kbd>^[</kbd>3A/<kbd>^[</kbd>
+16A <kbd>^[</kbd>1A/<kbd>^[</kbd>15A°<kbd>^[</kbd>3A/<kbd>^[</kbd>
+15A <kbd>^[</kbd>1A/<kbd>^[</kbd>16A°<kbd>^[</kbd>3A/<kbd>^[</kbd>
+14A <kbd>^[</kbd>1A/<kbd>^[</kbd>17A°<kbd>^[</kbd>3A/<kbd>^[</kbd>
+13A <kbd>^[</kbd>1A/<kbd>^[</kbd>18A°<kbd>^[</kbd>3A/<kbd>^[</kbd>
+12A <kbd>^[</kbd>1A/<kbd>^[</kbd>19A°<kbd>^[</kbd>3A/<kbd>^[</kbd>
+11A <kbd>^[</kbd>1A/<kbd>^[</kbd>20A°<kbd>^[</kbd>3A/<kbd>^[</kbd>
+10A <kbd>^[</kbd>1A/<kbd>^[</kbd>21A°<kbd>^[</kbd>3A/<kbd>^[</kbd>
+9A <kbd>^[</kbd>1A/<kbd>^[</kbd>22A°<kbd>^[</kbd>3A/<kbd>^[</kbd>
+8A <kbd>^[</kbd>1A/<kbd>^[</kbd>23A°<kbd>^[</kbd>3A/<kbd>^[</kbd>
+7A <kbd>^[</kbd>1A/<kbd>^[</kbd>24A°<kbd>^[</kbd>3A/<kbd>^[</kbd>
+6A <kbd>^[</kbd>1A/<kbd>^[</kbd>25A°<kbd>^[</kbd>3A/<kbd>^[</kbd>
+5A <kbd>^[</kbd>1A/<kbd>^[</kbd>26A°<kbd>^[</kbd>3A/<kbd>^[</kbd>
+4A <kbd>^[</kbd>1A/<kbd>^[</kbd>27A°<kbd>^[</kbd>3A/<kbd>^[</kbd>
+3A <kbd>^[</kbd>1A/<kbd>^[</kbd>28A°<kbd>^[</kbd>3A/<kbd>^[</kbd>
+2A <kbd>^[</kbd>1A/<kbd>^[</kbd>29A°<kbd>^[</kbd>3A/<kbd>^[</kbd>
+1A <kbd>^[</kbd>1A/<kbd>^[</kbd>30A°<kbd>^[</kbd>2A/<kbd>^[</kbd>
+1A/<kbd>^[</kbd>31A°<kbd>^[</kbd>1A/<kbd>^[</kbd>
+32A°<kbd>^[</kbd>
+</pre>
+<h3>Stage 3: Macro Execution</h3>
+<p><code>qq^D@&quot;kq28@q</code></p>
+<p>Finally, record a macro into <code>@q</code> that takes the contents of a line, executes them as a macro, and moves up a line. Executing this for every line gives us the final result.</p>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES6), 86 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=(y=-1,x,n=9+y-x--)=&gt;29-y?` /_°
 `[x?n&lt;0?0:n&amp;&amp;x&gt;3&amp;y&gt;3?3:n&lt;33^3*!y:4]+f(y+!x,x||36):&quot;&quot;
@@ -74,7 +162,7 @@
   &quot;&quot;               //   stop
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, <s>100</s>, <s>91</s>, <s>89</s>, 90 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, <s>100</s>, <s>91</s>, <s>89</s>, 90 bytes</h1>
 
 <pre class="lang-hs prettyprint-override"><code>g&lt;$&gt;[0..28]&lt;*&gt;[-27..8]
 g y x|x&gt;7='\n'|x+y&gt;32||x+y&lt;0=' '|y&lt;1='_'|x+y&gt;0,x&lt;5,y&gt;3='°'|0&lt;1='/'
@@ -83,7 +171,7 @@ g y x|x&gt;7='\n'|x+y&gt;32||x+y&lt;0=' '|y&lt;1='_'|x+y&gt;0,x&lt;5,y&gt;3='°'
 <p>+1 byte because I didn't notice non-ascii <code>°</code></p>
 <p><a href="https://tio.run/##y0gszk7Nyflfraus4OPo5x7q6O6q4BwQoKCsW8uVbRvzP91GxS7aQE/PyCLWRssuWtfIXE/PIpYrXaFSoaKmws7cVj0mT72mQrvSztioBkTbGNiqK6jXVNoY2qrHQ2QMdCpsTHWAKmzVD21QrzEASemr/89NzMyzLSgtCS4pUsj@DwA" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1>Bash + brotli, 133 bytes</h1>
+<div id="pu3" class="pu"><h1>Bash + brotli, 133 bytes</h1>
 <p>Kind of cheating but here goes:</p>
 <pre><code>echo HwEGwByp4z4Rt81aWOEFZMDWyxf//HsD2thmeRh5zL/jyX1d4EQQh9t6rW3jgi936M+HpQGCAoMDhASFBYYGh0eAAgkaRKiQoUOG57ob8wY=|base64 -d|brotli -d
 </code></pre>
@@ -91,7 +179,7 @@ g y x|x&gt;7='\n'|x+y&gt;32||x+y&lt;0=' '|y&lt;1='_'|x+y&gt;0,x&lt;5,y&gt;3='°'
 <pre><code>echo Hw0E+I+UrMW5EuQFtmFfvhQiDA+onBpYGGBAMf+FwAyPxGuTleazVpsBWCwWi8VisVgsFovFYrFYLBaLRdJfzNvcAA==|base64 -d|brotli -d
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 43 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 43 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>'_8×'/9DÌŸ×'°8žwŸ×ε'/4×ìÀN21-F¤ð.;]`¨)˜.Bí»
 </code></pre>
 <p><a href="https://tio.run/##yy9OTMpM/f9fPd7i8HR1fUuXwz1HdwBZhzZYHN1XDmKe26qub3J4@uE1hxv8jAx13Q4tObxBzzo24dAKzdNz9JwOrz20@/9/AA" rel="nofollow noreferrer">Try it online.</a></p>
@@ -132,7 +220,7 @@ g y x|x&gt;7='\n'|x+y&gt;32||x+y&lt;0=' '|y&lt;1='_'|x+y&gt;0,x&lt;5,y&gt;3='°'
  }R           # After the map: Reverse the list back
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s> 43 42 </s> 39 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s> 43 42 </s> 39 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>25ðṬṖ;“@ɦ(½¤‘b4UŻ€31Ð¡Ḋ€Ḋ$ƬḣẎ»/ị“_/° ”Y
 </code></pre>
 <p>A full program that takes no arguments and prints the pile to stdout.</p>
@@ -171,7 +259,7 @@ g y x|x&gt;7='\n'|x+y&gt;32||x+y&lt;0=' '|y&lt;1='_'|x+y&gt;0,x&lt;5,y&gt;3='°'
                                         - implicit print
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 30 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 30 bytes</h1>
 <pre><code>←×_⁸↓Ｇ→⁹↓²⁵↙³←³³/↓Ｇ↗²⁵→⁸↓²⁵°
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iOSOxKDk_MWfBgqWlJWm6FjeXBRRl5pVoWPmkppXoKIRk5qYWayjFK-koWGhqWnP55pelali55JfnATkB-TmV6fl5GlZBmekZQMWWOgpgKR0FI1MoE2KKMZAHZQGZSvpKOE0KLYCaBTYByrZAMVfp0Aag_iXFScnFUDcvj1bSLctRioVyAQ" rel="nofollow noreferrer">Attempt This Online!</a> Link is to verbose version of code. Explanation:</p>
@@ -191,13 +279,13 @@ g y x|x&gt;7='\n'|x+y&gt;32||x+y&lt;0=' '|y&lt;1='_'|x+y&gt;0,x&lt;5,y&gt;3='°'
 </code></pre>
 <p>Draw the trapezium (US: trapezoid) of <code>°</code>s. (Note that <code>°</code> costs 3 bytes in Charcoal.)</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3/" rel="nofollow noreferrer">Vyxal 3</a> <code>-Mj</code>, 51 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3/" rel="nofollow noreferrer">Vyxal 3</a> <code>-Mj</code>, 51 bytes</h1>
 <pre><code>2ƛ5+'/×]8₃Rƛ176O×]JƛL31&lt;['/p31«'/31nL-3g×+]'_8×34«p
 </code></pre>
 <p><a href="https://vyxal.github.io/latest.html#H4sIAAAAAAAAE6tWSssvyk0sUbIy0lHKSE1MSS1SslJS0lFKzk9JBbKMjs021VbXPzw91uJRU3PQsdmG5mb-QJ7Xsdk-xoY20er6BcaGh1ar6xsb5vnoGqcfnq4dqx5vcXi6scmh1QVAc9Ly80tgZqblJKYXK1lFK_kCOVlKsTpKmXkFpSUgISC7LLWoODM_D6jUWM9Ez9BAqRYACl1hnJ0AAAA" rel="nofollow noreferrer">Vyxal It Online!</a></p>
 <p>probably golfable</p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://esolangs.org/wiki/Bubblegum" rel="noreferrer">Bubblegum</a>, 129 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://esolangs.org/wiki/Bubblegum" rel="noreferrer">Bubblegum</a>, 129 bytes</h1>
 <p>not printable, xxd dump:</p>
 <pre><code>00000000: 5d00 0000 04ff ffff ffff ffff ff00 106e  ]..............n
 00000010: 0c5f d4dd 54e5 a78d 4c84 ac22 2022 8f09  ._..T...L..&quot; &quot;..
