--- a/q/275815.html
+++ b/q/275815.html
@@ -26,27 +26,29 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>109</td><td>PHP 7.4+</td><td>240928T010145Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275839#275839">Ismael M</a></td></tr>
+<tr d-ix="0"><td>106</td><td>PHP 7.4+  109</td><td>240928T010145Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275839#275839">Ismael M</a></td></tr>
 <tr d-ix="1"><td>034</td><td>Vyxal Ḣso</td><td>240927T231612Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275835#275835">emanresu</a></td></tr>
 <tr d-ix="2"><td>092</td><td>C gcc</td><td>240927T131704Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275817#275817">jdt</a></td></tr>
 <tr d-ix="3"><td>033</td><td>05AB1E</td><td>240927T151859Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275828#275828">Kevin Cr</a></td></tr>
 <tr d-ix="4"><td>073</td><td>Arturo</td><td>240927T150056Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275827#275827">chunes</a></td></tr>
 <tr d-ix="5"><td>040</td><td>Japt</td><td>240927T135632Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275819#275819">Shaggy</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>PHP 7.4+ - 109 bytes</h1>
-<p>An anonymous arrow function that returns HTML containing all the stylized words.<br>
+<div id="pu0" class="pu"><h1>PHP 7.4+ - <del>109</del> 106 bytes</h1>
+<p>Thanks to <a href="https://codegolf.stackexchange.com/users/11261/jordan">Jordan</a> for pointing out that the <code>#RGB</code> format works, and saved me 3 bytes.</p>
+<hr />
+<p>An anonymous arrow function that print the HTML containing all the stylized words.<br>
 The <code>&lt;pre&gt;</code> is needed to keep the whitespace.</p>
-<pre class="lang-php prettyprint-override"><code>fn($t)=&gt;'&lt;pre&gt;'.preg_replace_callback('/\S+\s*/',fn($m)=&gt;'&lt;font color=#5'.rand(10,99).&quot;678&gt;$m[0]&quot;,$t)
+<pre class="lang-php prettyprint-override"><code>fn($t)=&gt;print('&lt;pre&gt;'.preg_replace_callback('/\S+\s*/',fn($m)=&gt;'&lt;font color=#5'.rand(10,99).&quot;&gt;$m[0]&quot;,$t))
 </code></pre>
 <p>The idea is simple: randomly generates 89 colors (the minimum required is 16), into a deprecated <code>&lt;font&gt;</code> tag.<br>
-I chose to change the red and green channels for a decent visual variety in the colors (1 digit for each channel).<br>
+I chose to change the green and bçue channels for a decent visual variety in the colors (1 digit for each channel).<br>
 Does it's best to keep whitespaces by using the <code>&lt;pre&gt;</code> tag.</p>
 <p>As per the rules, HTML output is allowed, and a function is also allowed.</p>
 <p>You can try it here:</p>
 <p><div class="snippet" data-lang="js" data-hide="true" data-console="false" data-babel="false">
 <div class="snippet-code snippet-currently-hidden">
 <pre class="snippet-code-js lang-js prettyprint-override"><code>// This is my code
-let answer = "fn($t)=&gt;print('&lt;pre&gt;'.preg_replace_callback('/\\S+\\s*/m',fn($m)=&gt;'&lt;font color=#5'.rand(10,99).\"678&gt;$m[0]\",$t))";
+let answer = "fn($t)=&gt;print('&lt;pre&gt;'.preg_replace_callback('/\\S+\\s*/m',fn($m)=&gt;'&lt;font color=#5'.rand(10,99).\"&gt;$m[0]\",$t))";
 
 document.getElementById('code').value = answer;
 document.getElementById('code_length').textContent = answer.length;
