--- a/q/275815.html
+++ b/q/275815.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>101</td><td>Javascript</td><td>240928T025352Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275842#275842">l4m2</a></td></tr>
+<tr d-ix="0"><td>103</td><td>Javascript</td><td>240928T025352Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275842#275842">l4m2</a></td></tr>
 <tr d-ix="1"><td>106</td><td>PHP 7.4+  109</td><td>240928T010145Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275839#275839">Ismael M</a></td></tr>
 <tr d-ix="2"><td>034</td><td>Vyxal Ḣso</td><td>240927T231612Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275835#275835">emanresu</a></td></tr>
 <tr d-ix="3"><td>092</td><td>C gcc</td><td>240927T131704Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275817#275817">jdt</a></td></tr>
@@ -34,16 +34,16 @@
 <tr d-ix="5"><td>073</td><td>Arturo</td><td>240927T150056Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275827#275827">chunes</a></td></tr>
 <tr d-ix="6"><td>040</td><td>Japt</td><td>240927T135632Z</td><td><a href="https://codegolf.stackexchange.com/questions/275815/randomly-color-the-words/275819#275819">Shaggy</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Javascript, 101 bytes</h1>
+<div id="pu0" class="pu"><h1>Javascript, 103 bytes</h1>
 <p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
 <div class="snippet-code">
 <pre class="snippet-code-js lang-js prettyprint-override"><code>f=
-s=&gt;document.write(s.replace(/\s|^|(.)/g,(h,c)=&gt;c?`&lt;z&gt;${c}&lt;/z&gt;`:h+`&lt;font color=${Math.random()*1e6}&gt;`))</code></pre>
-<pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;textarea id=input1&gt;&lt;/textarea&gt;&lt;input type=button onclick=f(input1.value)&gt;</code></pre>
+s=&gt;document.write(`&lt;pre&gt;`+s.replace(/\s|^|(.)/g,(h,c)=&gt;c?`&lt;z&gt;`+c:h+`&lt;font color=${Math.random()*1e6}&gt;`))</code></pre>
+<pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;textarea id=input1&gt;&amp;lt;font color=#123456&amp;gt; test &amp;lt;/font&amp;gt;&lt;/textarea&gt;&lt;input type=button onclick=f(input1.value)&gt;</code></pre>
 </div>
 </div>
 </p>
-<p><code>&lt;z&gt;${c}&lt;/z&gt;</code> to allow input with <code>&lt;&gt;</code></p>
+<p><code>&lt;z&gt;${c}</code> to allow input with <code>&lt;&gt;</code></p>
 </div>
 <div id="pu1" class="pu"><h1>PHP 7.4+ - <del>109</del> 106 bytes</h1>
 <p>Thanks to <a href="https://codegolf.stackexchange.com/users/11261/jordan">Jordan</a> for pointing out that the <code>#RGB</code> format works, and saved me 3 bytes.</p>
