--- a/q/275689.html
+++ b/q/275689.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>121</td><td>Python 3</td><td>240924T030039Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275732#275732">tsh</a></td></tr>
-<tr d-ix="1"><td>163</td><td>C clang</td><td>240924T152052Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275752#275752">jdt</a></td></tr>
+<tr d-ix="0"><td>133</td><td>C clang</td><td>240924T152052Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275752#275752">jdt</a></td></tr>
+<tr d-ix="1"><td>121</td><td>Python 3</td><td>240924T030039Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275732#275732">tsh</a></td></tr>
 <tr d-ix="2"><td>166</td><td>Python 3.8 prerelease</td><td>240923T000833Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275699#275699">David Ch</a></td></tr>
 <tr d-ix="3"><td>177</td><td>Haskell</td><td>240924T204832Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275760#275760">Antonio </a></td></tr>
 <tr d-ix="4"><td>022</td><td>K ngn/k</td><td>240922T202605Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275695#275695">ovs</a></td></tr>
@@ -39,7 +39,40 @@
 <tr d-ix="10"><td>017</td><td>Vyxal</td><td>240923T072643Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275707#275707">emanresu</a></td></tr>
 <tr d-ix="11"><td>032</td><td>Charcoal</td><td>240922T213047Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275696#275696">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 121 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, <s>163</s> 133 bytes</h1>
+
+<pre class="lang-c prettyprint-override"><code>i,j,c,o,p,g;f(*a){for(i=c=0;i&lt;2e4;c+=o*o==o){for(g=o=p=9,j=i++;p--;j/=3)o-=j%3,g&amp;=a[p]==&quot;x o&quot;[j%3];for(p=g*13;p--;c/=2)a[p]=48+c%2;}}
+</code></pre>
+<p><a href="https://tio.run/##bVDbboMwDH3nKywkJi5BdNCHTan3BfsDxgOKCgqiOCpM7Yb49bEkgFak@SHysc@xfSJi0ZZdPc@SNUwwYorVvPLDMhgruvoSBR64PKXnIxcRUkiItLRqJFT4yhqUUcRVHPMmwSygGBsvY/UTlrkqEN07kJvrUsGNSmEdPmeWLhJMA0s6vkTCS/k0zbIb4FLKzg9gdECHLoQwnPuhzwtAGOHdvZsgHS5bEcAOEeyQho@IYIeWnknsXBcmvi0GQZ/6Rejl95kq354RQLLhcCksfG0OfCOS@sNAnqxWJ1G0WdmmGlWeHqyddZmJm@iF@rJL2OpYFsFfX121uPLd3Gt7rX0zNgztgbKc@I9GSz66PX9yJmf@EVVb1v0c334B" rel="nofollow noreferrer" title="C (clang) – Try It Online">Try it online!</a></p>
+<p>-30 bytes thanks to @emanresu</p>
+<p>Ungolfed:</p>
+<pre class="lang-c prettyprint-override"><code>void func(int *a) {
+
+   for (int i = 0, c = 0; i &lt; 19682; ) {
+      int g = 9;
+      int o = 0;
+      int p = 9;
+
+      for (int j = i++; p--; j /= 3) {
+         // Subtract the position (X or O) from o
+         o -= j % 3;
+
+         // Check if the current cell matches the input 
+         g &amp;= a[p] == &quot;x o&quot;[j % 3];
+      }
+
+      // If the entire board matches (g == 1), generate the 13-bit binary of c
+      for (p = g * 13; p--; c /= 2) {
+         a[p] = 48 + c % 2;  
+      }
+
+      // increment c if o is 0 or 1
+      c += o * o == o;
+   }
+}
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 121 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda s:bin(g('').index(s)+8888)[3:];g=lambda p,c=0:[p]*(c%8&lt;2)if p[8:]else sum([g(p+' xo'[n%5],c+n)for n in[0,7,1]],[])
 </code></pre>
@@ -52,45 +85,6 @@
 </code></pre>
 <p><a href="https://tio.run/##tZNNj9owEIbv@RXTlarY2YBiOBQQOVTqx62HilsarbKJw7oyduQ4Ular/e10bKtACdr2Ui7Yw7zzPjNjumf7pNXy2PAWWjF@Enthe6KGw0PjjykIVdNNBCBaOIchzyFzUYBnwWUDGZ657HmItdpAg0ogBUthlcK6dHos5ZOgWPsoK2nIDwrjFLcgYAbsDBI@wbaBBFgGSQJX6RTuwUSRa0vyvt89Vert3vB4ZheOxFRqzwkaX1S@x8pvIIsUdmbgE0wzmc6FwyVQlsLsbw5fKqx0w8I3@/3jt6@fSVKZff@7M8kV8Xe3tCVUqgF3LRalC8xYqNTbytgUuGpSPPMOcp91AlaO42qUrnJvDfFaSq/R0BvLwRa12zwYXFOrG4gTIETBuST/jOMk7gnQq224F4w0@PMUI2rzH0dZHR6bCvrNo1CkcKUEnVvcUi8ry0mxXKRskaWMsTJZrehpj2HoLEuSNRXtSxKUr9v8Jbljq/Xd67tcvF9vF@VcqIaPpKfJB1rM2HJTHjsjlCUtiUek0eMIOqY0isSh08aCsNxYrSU@jVpLyWsrtMJLO6jax6Nd/j9AcRx/DGM3JY8qKR@E6gaL@ynieP5TY6I4m53Y553RzVBbkhQxjDouvTuIea0H7D0eYzo7XbB9oQpkL4ODHmywkKK35FB1pE3hZI2jCgP0u@eWnCVu/f5dTXIx4vMFzXMW/hBOKug2d99xxmJ6/pNeVjz@Ag" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 <p>A very slow solution. The <code>range</code> is replaced by a customized implementation in tio link to speed it up. It loops every (decimal) number less than 10<sup>9</sup>, and only keeps numbers that is only composed with digits 1, 8, 9 and mod 9 less than 2. Then replace 1, 8, 9 by <code>x</code>, <code>o</code>, <code> </code>. And all these strings are considered valid and assign an encoding to it from 0 to 9348. Then multiply the encoding by 7 and mod by 2<sup>13</sup>.</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, 163 bytes</h1>
-
-<pre class="lang-c prettyprint-override"><code>i,j,x,o,c,p,d,b[9];f(*a){for(c=i=0;i&lt;2e4;c+=x==o|x==o+1){for(p=9,x=o=0,j=i++;p--;j/=3)b[p]=&quot;x o&quot;[d=j%3],x+=!d,o+=d&gt;1;for(p=!bcmp(a,b,36)*13;p--;c/=2)a[p]=48+c%2;}}
-</code></pre>
-<p><a href="https://tio.run/##bZDhboIwEMe/@xQniQnQIyqYZaaeT7A3YHyAIqZEaSMusjlefawFySTZfbj0f3e/Xv8VgTil1bHrJJbYoEKBGnPM4m3CC9dPvXuhLq4gSSsud@FhwwWjhkh928TWQ1/TFhtStMKSJGNcBwEvlxR5WawTchpQTpxTuYgSbBjNc1SM8v2aD@w8E2ftpphh9OL566jHxZJCL7X45pWJRcjbtpPVFc6prFwP7jMwYQo@XA/1tY4TILjDm9PYUCYcfCiAiVIwUUY@KwUTNfTsob/XgZaPi0GoD5MJavl1UIXbP8OD5aj9oTDMG6PgWsj@I8hdz5oDY6OV8VZLxeGqt/NYZuMmaqE/@yX4cCwT76@vLwYuXCdenGrD7q0NO/Y0MjzxH8Yg79V0vp21s@5HFKf0WHfB7Rc" rel="nofollow noreferrer" title="C (clang) – Try It Online">Try it online!</a></p>
-<p>Ungolfed:</p>
-<pre class="lang-c prettyprint-override"><code>int f(char* a)
-{
-   int c = 0;
-   for (int i = 0; i &lt;= 19682; i++)
-   {
-      char b[9];
-      int x = 0;
-      int o = 0;
-      int j = i;
-      for (int p = 9; p--; j /= 3)
-      {
-         b[p] = &quot;x o&quot;[j % 3];
-         x += j % 3 &lt; 1;
-         o += j % 3 &gt; 1;
-      }
-
-      if (!memcmp(a, b, 9))
-      {
-         for (int p = 13; p--; c /= 2)
-         {
-            a[p] = &quot;01&quot;[c % 2];
-         }
-         return c;
-      }
-
-      if (x == o || x == o + 1)
-      {
-         c++;
-      }
-   }
-}
-</code></pre>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s>177</s> <s>173</s> 166 bytes</h1>
 
