--- a/q/275689.html
+++ b/q/275689.html
@@ -46,7 +46,7 @@
 <p><a href="https://tio.run/##bVDbboMwDH3nKywkJi5BdNCHTan3BfsDxgOKCgqiOCpM7Yb49bEkgFak@SHysc@xfSJi0ZZdPc@SNUwwYorVvPLDMhgruvoSBR64PKXnIxcRUkiItLRqJFT4yhqUUcRVHPMmwSygGBsvY/UTlrkqEN07kJvrUsGNSmEdPmeWLhJMA0s6vkTCS/k0zbIb4FLKzg9gdECHLoQwnPuhzwtAGOHdvZsgHS5bEcAOEeyQho@IYIeWnknsXBcmvi0GQZ/6Rejl95kq354RQLLhcCksfG0OfCOS@sNAnqxWJ1G0WdmmGlWeHqyddZmJm@iF@rJL2OpYFsFfX121uPLd3Gt7rX0zNgztgbKc@I9GSz66PX9yJmf@EVVb1v0c334B" rel="nofollow noreferrer" title="C (clang) – Try It Online">Try it online!</a></p>
 <p>-30 bytes thanks to @emanresu</p>
 <p>Ungolfed:</p>
-<pre class="lang-c prettyprint-override"><code>func(int* a) {
+<pre class="lang-c prettyprint-override"><code>void func(int* a) {
     int c = 0;
     for(int i=0; i&lt;19682; i++)
     {
