--- a/q/275689.html
+++ b/q/275689.html
@@ -48,8 +48,7 @@
 <p>Ungolfed:</p>
 <pre class="lang-c prettyprint-override"><code>void func(int* a) {
     int c = 0;
-    for(int i=0; i&lt;19682; i++)
-    {
+    for(int i=0; i&lt;19682; i++) {
         int g = 1;
         int o = 9;
         int j = i;
