--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240928T181603Z
+"   /golfscore                                      20240928T182326Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/275853.html">Score the science points in 7 Wonders           : 0275853</a>
+<a href="q/230842.html">Days of the Week                                : 0230842</a>
 <a href="q/275815.html">Randomly color the words                        : 0275815</a>
 <a href="q/275821.html">BTD6 Kinetic Chaos (9/26/24 Odyssey)            : 0275821</a>
 <a href="q/275841.html">Find a datetime that works for everyone         : 0275841</a>
@@ -40,7 +42,6 @@
 <a href="q/148897.html">BigNum Bakeoff Reboot                           : 0148897</a>
 <a href="q/22599.html">Approximate a Bell Curve                        : 0022599</a>
 <a href="q/275697.html">Figure out which of your friends reveals confide: 0275697</a>
-<a href="q/230842.html">Days of the Week                                : 0230842</a>
 <a href="q/242780.html">Real-world progress bar                         : 0242780</a>
 <a href="q/90497.html">Alphabet triangle strikes again                 : 0090497</a>
 <a href="q/230438.html">Create a Pride Flag                             : 0230438</a>
