--- a/q/275821.html
+++ b/q/275821.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>010</td><td>Jelly</td><td>240928T183657Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275857#275857">Jonathan</a></td></tr>
-<tr d-ix="1"><td>014</td><td>Charcoal</td><td>240928T095502Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275849#275849">Neil</a></td></tr>
+<tr d-ix="0"><td>017</td><td>Charcoal</td><td>240928T095502Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275849#275849">Neil</a></td></tr>
+<tr d-ix="1"><td>010</td><td>Jelly</td><td>240928T183657Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275857#275857">Jonathan</a></td></tr>
 <tr d-ix="2"><td>027</td><td>Retina</td><td>240928T073856Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275846#275846">Neil</a></td></tr>
 <tr d-ix="3"><td>024</td><td>Bash + common utilities</td><td>240927T235348Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275838#275838">Digital </a></td></tr>
 <tr d-ix="4"><td>045</td><td>Arturo</td><td>240927T234406Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275837#275837">chunes</a></td></tr>
@@ -37,7 +37,35 @@
 <tr d-ix="8"><td>8125</td><td>Vyxal j</td><td>240927T143405Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275824#275824">lyxal</a></td></tr>
 <tr d-ix="9"><td>044</td><td>Bash</td><td>240927T142931Z</td><td><a href="https://codegolf.stackexchange.com/questions/275821/btd6-kinetic-chaos-9-26-24-odyssey/275822#275822">Themooni</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 10 <a href="https://github.com/DennisMitchell/jelly/wiki/code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 17 bytes</h1>
+<pre><code>Ｅ⁷⁰⁺⁺⁺⁺⊕ι ⊕⊗ι,⊗⊕ι
+</code></pre>
+<p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMM3sUDD3EBHISCntFgDjfDMSy5KzU3NK0lN0cjU1FFQUlACksiiLvmlSTlgWU2QvA5IHiaGqhsErP///69blgMA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
+<pre><code> ⁷⁰                 Literal integer `70`
+Ｅ                   Map over implicit range
+        ι           Current value
+       ⊕            Incremented
+                    Literal space
+            ι       Current value
+           ⊗        Doubled
+          ⊕         Incremented
+             ,      Literal string `,`
+                ι   Current value
+               ⊕    Incremented
+              ⊗     Doubled
+   ⁺⁺⁺⁺             All concatenated together
+                    Implicitly print
+</code></pre>
+<p>18 bytes on TIO to align the second column:</p>
+<pre><code>Ｅ⁷⁰⁺⁺⁺◨Ｉ⊕ι³⊕⊗ι,⊗⊕ι
+</code></pre>
+<p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMM3sUDD3EBHISCntFgDiUhMCcpMzyjRcE4sLtHwzEsuSs1NzStJTdHI1NTUUTAGYmRBl/zSpByIJFBGSUcJSMLE0DQDgfX///91y3IA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation: Instead of appending a space to the first number, it is converted to string and then padded to length <code>3</code>.</p>
+<p>17 bytes on ATO to align the second column:</p>
+<pre><code>Ｅ⁷⁰⁺⁺⁺◨⊕ι³⊕⊗ι,⊗⊕ι
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m70iOSOxKDk_MWfBgqWlJWm6FjdLA4oy80o0fBMLNMwNdBQCckqLNZCIxJSgzPSMEg3PvOSi1NzUvJLUFI1MTR0FYyBGFnPJL03KActpAmWUdJSAJEwMVS8IWC8pTkouhjphebSSblmOUiyUCwA" rel="nofollow noreferrer" title="Charcoal – Attempt This Online">Attempt This Online!</a> Link is to verbose version of code. Explanation: As above except that <code>Pad</code> implicitly casts to string.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 10 <a href="https://github.com/DennisMitchell/jelly/wiki/code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>140s2ĖṾ€€G
 </code></pre>
 <p>A full program that takes no arguments and prints the table where 1-9 are padded with a space on their right and the delimiters are five spaces and <code>,</code>.</p>
@@ -58,30 +86,6 @@
                     (6)         (6)         (6)               (5)
            - implicit print
 </code></pre>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 14 bytes</h1>
-<pre><code>Ｅ⁷⁰⭆¹⊕⟦ι⟦⊗ι⊕⊗ι
-</code></pre>
-<p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMM3sUDD3EBHIbgEyE0H8Qx1FDzzkotSc1PzSlJTNKIzdRSiXfJLk3KAnExNVEmEuGZsbKympqb1////dctyAA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
-<pre><code> ⁷⁰             Literal integer `70`
-Ｅ               Map over implicit range
-    ¹           Literal integer `1`
-   ⭆            Map over implicit range and join
-             ι  Outer value
-            ⊗   Doubled
-           ⊕    Incremented
-          ι     Outer value
-         ⊗      Doubled
-        ⟦       Make into list
-       ι        Outer value
-      ⟦         Make into list
-     ⊕          Vectorised incremented
-                Implicitly print
-</code></pre>
-<p>17 bytes for a more traditional output format:</p>
-<pre><code>Ｅ⁷⁰⁺⁺⁺⁺⊕ι ⊕⊗ι,⊗⊕ι
-</code></pre>
-<p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMM3sUDD3EBHISCntFgDjfDMSy5KzU3NK0lN0cjU1FFQUlACksiiLvmlSTlgWU2QvA5IHiaGqhsErP///69blgMA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation: Simply concatenating the appropriate values together.</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language" rel="nofollow noreferrer">Retina</a>, 27 bytes</h1>
 <pre><code>
