--- a/q/275853.html
+++ b/q/275853.html
@@ -26,10 +26,17 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>034</td><td>Charcoal</td><td>240928T184702Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275858#275858">Neil</a></td></tr>
-<tr d-ix="1"><td>060</td><td>R</td><td>240928T182326Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275856#275856">pajonk</a></td></tr>
+<tr d-ix="0"><td>019</td><td>Jelly</td><td>240928T190640Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275859#275859">Unrelate</a></td></tr>
+<tr d-ix="1"><td>034</td><td>Charcoal</td><td>240928T184702Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275858#275858">Neil</a></td></tr>
+<tr d-ix="2"><td>060</td><td>R</td><td>240928T182326Z</td><td><a href="https://codegolf.stackexchange.com/questions/275853/score-the-science-points-in-7-wonders/275856#275856">pajonk</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 34 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 19 bytes</h1>
+<pre><code>+ð2Żṗ3_ƒÐḟµṂ×7+ḋ`)Ṁ
+</code></pre>
+<p><a href="https://tio.run/##y0rNyan8/1/78Aajo7sf7pxuHH9s0uEJD3fMP7T14c6mw9PNtR/u6E7QfLiz4f/D3VsObT06@eHOxY8a9@naHZ0U9qhpzeHlD3euUrE9tFRfM/L/fw0DHQVTHQUgaaCpoGunYGTKBRICIjOYkLEZF0KVIVzIWEfBCMiHazTk0jBBE7IAqzJGFoJrNIIbb4hkliFcyBTVLGNzsPHIZhkbw2xEmGWB5AhDZCF0jUC@CaaQMbJZZkiuR3gbi43YNRqBRdGFjJDdBfe2EVQIAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
+<p>Basically the formula as given, except non-recursive--filters every way to add 1 or 2 to a symbol type to those which sum to <span class="math-container">\$z\$</span>. Might be a shorter way to do that, and I don't feel the best about the chaining.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 34 bytes</h1>
 <pre><code>⊞υＥ³ＮＦＮＦ⮌υＦ³⊞υＥκ⁺μ⁼λνＩ⌈Ｅυ⁺ΣＸι²×⁷⌊ι
 </code></pre>
 <p><a href="https://tio.run/##VY0xDsIwDEV3TuHRlsxAOzB0RAwMRRFwgVAFNSJJS1IXbh9KAQn@5if/95tWx6bTLmclqUVhqHWPJcMu9DLsxZ9NRCKqFpcuAv5TmNnBjCYmg/IFJcGv7MqgnCT0DNubaJfQMQSapSraMOBGpwFr/bBePL4q8qkcp1t192nMMhREDCfrTcL1ZLZhfrf0TpVzCQWsoMjL0T0B" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -47,7 +54,7 @@
 <p>Calculate the score of each of the lists and take the maximum.</p>
 <p>At least in the case of one special action, it seems to normally be optimal to add it to your largest symbol, except in the case where the there is a unique smallest symbol and the difference between the largest and smallest symbol is less than <code>4</code>, in which case you should add it to your smallest symbol.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 60 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 60 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>f=\(x,z)`if`(z,max(apply(x+diag(3),2,f,z-1)),x%*%x+7*min(x))
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=fZHRCoIwFIbp1qcYRLDZEdyOmhfVk3ShFAshQ6Jg-SrdWNBD1Yt0m2aimxlsDD4O3_nP2eV6KG5ycT8dpRM-5nKxogpyFiUyojmksaJxlu3OVE03SbylyECAhNzhjIGa2BM1ndlpsqeKsdrxHL0kXVMXiA_EZdUdE2dJhG99eXmClmNg6fVc4whEVKz18A_3ejxs6lHnXY_o9OWGn2vcN_04a_rqfsROnq4_NHJyk__0lNAb4Kj7A2NefW9Def54ynoc4KKXv92baHj9_0VRv28" rel="nofollow noreferrer">Attempt This Online!</a></p>
