--- a/q/275853.html
+++ b/q/275853.html
@@ -34,7 +34,17 @@
 <pre><code>3ṗ‘ṛ¦ƒ€µṂ×7+ḋ`)Ṁ
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8/9/44c7pjxpmPNw5@9CyY5MeNa05tPXhzqbD0821H@7oTtB8uLPh/8PdWw5tPTr54c7Fjxr36dodnRQGVHZ4ucPDnatUbA8t1deM/P9fw0BHwVRHAUgaaCro2ikYmXKBhIDIDCZkbMaFUGUIFzLWUTAC8uEaDbk0TNCELMCqjJGF4BqN4MYbIpllCBcyRTXL2BxsPLJZxsYwGxFmWSA5whBZCF0jkG@CKWSMbJYZkusR3sZiI3aNRmBRdCEjZHfBvW0EFQIA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
-<p>Basically the formula as given, all the way down to not actually exploiting the bound on <span class="math-container">\$z\$</span>. Might still be a shorter way to do that.</p>
+<p>Basically the formula as given, all the way down to not actually exploiting the bound on <span class="math-container">\$z\$</span>. Might still be a shorter way to do that--the best I have with <code>Ṭ</code> is <code>3Ṭ€¤ṗ+ƒ€µṂ×7+ḋ`)Ṁ</code> for 17.</p>
+<pre><code>3ṗ                  [1 .. 3] to the Cartesian power of z. ([[]] if 0)
+      €             For each set of indices to increment,
+  ‘                 increment [a, b, c]
+   ṛ¦               at
+     ƒ              each index in sequence.
+       µ      )     For each choice:
+        Ṃ×7         multiply the min by 7
+           +ḋ`      and add that to the sum of squares.
+               Ṁ    Take the maximum of those results.
+</code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 34 bytes</h1>
 <pre><code>⊞υＥ³ＮＦＮＦ⮌υＦ³⊞υＥκ⁺μ⁼λνＩ⌈Ｅυ⁺ΣＸι²×⁷⌊ι
